--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Example Project</string>
+    <string name="shortstock">Short SP 500!</string>
 </resources>
